public/assets/css/style.css
/* ... */
.JC-container {
    width: 1200px;
    margin: 0 auto;
}

.leaderboards-grid {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 50px;
}

.leaderboards-search {
    outline: none;
    padding: 8px 10px;
    font-size: 16px;
    border: none;
    border-radius: 80px;
}

.GridBox-profile {
    background: #242424;
    margin: 6px;
    width: 585px;
    border-radius: 6px;
}

.profileRow {
    justify-content: center;
    display: flex;
    align-items: center;
    margin: 40px 0px;
}

.profileCol {
    margin-left: 30px;
}

.playerName {
    font-family: 'Orbitron', sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 22px;
    margin-bottom: 15px;
}

.playerUUID {
    font-size: 14px;
}

.profileImg {
    width: 100px;
    height: 100px;
    border-radius: 5px;
}

.profileFlex {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    flex-wrap: wrap;
}

.profileInfo {
    width: 195px;
    text-align: center;
    padding: 20px;
}

.profType {
    font-size: 16px;
    font-weight: 600;
    color: #BFBFBF;
}

.profNumb {
    color: #fff;
    font-weight: 700;
    font-size: 20px;
    margin: 10px 0px;
}

.bookEvent {
    background: url(/assets/images/cta-bg.png);
    display: flex;
    align-items: center;
    justify-content: center;
    background-size: cover;
    background-position: center;
    margin-top: 80px;
    background-repeat: no-repeat;
    height: 700px;
}

.headingBtn {
    font-family: 'Orbitron', sans-serif;
    text-transform: uppercase;
    background: #fff;
    padding: 15px 25px;
    margin-top: 20px;
    color: black;
    font-weight: 700;
    border-radius: 4px;
}

/* CONTAINER CSS */


/* SERVER PAGE CSS */

.serverContainer {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    width: 80%;
    margin: 0 auto;
    margin-top: 50px;
}

.serverContent {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-right: 25px;
}

.serverModule {
    background: #242424;
    padding: 25px;
    display: flex;
    align-items: flex-start;
    margin-bottom: 25px;
    justify-content: center;
    width: 750px;
    border-radius: 10px;
    height: 250px;
}

.server-moduleImage {
    width: 200px;
    border-radius: 6px;
    margin-top: 5px;
}

.smRight {
    margin-left: 25px;
    width: 100%;
}

.flexSpaceBetween {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.onlineTag {
    background: #27ae60;
    font-size: 12px;
    text-transform: uppercase;
    font-weight: 500;
    width: 90px;
    text-align: center;
    line-height: 35px;
    border-radius: 50px;
}

.smRight-Name {
    font-family: 'Orbitron', sans-serif;
    text-transform: uppercase;
    font-size: 20px;
    font-weight: 600;
    z-index: 1;
}


.smModPack {
    color: #bfbfbf;
    margin: 8px 0px;
    font-size: 12px;
}

.smModDesc {
    color: #bfbfbf;
    margin: 8px 0px;
    font-size: 13px;
    font-weight: 600;
    line-height: 20px;
}

.flexEndLow {
    display: flex;
    align-items: center;
    margin-top: 60px;
    justify-content: flex-start;
}

.flexEndLow a, .flexEndLow div{
    font-size: 14px;
    border: 1px solid white;
    line-height: 35px;
    font-weight: 500;
    width: 150px;
    margin: 0px 5px;
    text-align: center;
    border-radius: 80px;
}

.serverSide {
    width: 350px;
    background: #242424;
    height: 250px;
    padding: 20px 25px;
    border-radius: 10px;
    margin-bottom: 25px;
    overflow: hidden;
}

.serverSpaceBetween {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.serverRow {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 25px;
    flex-wrap: wrap;
}

.serverRow-image {
    border-radius: 80px;
    margin: 5px;
}

.serverSpaceBetween p {
    font-family: 'Orbitron', sans-serif;
    color: #27ae60;
    font-weight: 600;
}

.serverSpaceBetween i {
    color: #bfbfbf;
}



/* SERVER PAGE END */

/* FOOTER */

.JCFooter {
    background: #393939;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 50px 30px;
    margin-top: 100px;
}

.footerLogo {
    width: 200px;
}

.footerTitle {
    font-family: 'Orbitron', sans-serif;
    text-transform: uppercase;
    font-size: 34px;
    font-weight: 700;
    text-align: center;
    margin-bottom: 20px;
}

.footerDesc {
    color: #bfbfbf;
    width: 25%;
    text-align: center;
    margin-bottom: 25px;
    font-size: 14px;
    line-height: 20px;
}

.joshuacote {
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: center;

    color: #bfbfbf;
    text-align: center;
    margin-bottom: 25px;
    font-size: 14px;
    line-height: 20px;
    font-weight: 700;
    text-transform: uppercase;
}

.joshuacote img {
    width: 65px;
    margin-left: 10px;
}

.footerCopyright {
    color: #bfbfbf;
    text-align: center;
    margin-bottom: 10px;
    font-size: 14px;
    font-weight: 700;
    text-transform: uppercase;
}

/* END OF Footer */

/* Joshs Additions */

.download-Btn {
    font-family: 'Orbitron', sans-serif;
    text-transform: uppercase;
    align-items: center;
    text-align: center;
    font-weight: 600;
    font-size: 15px;
    color: #CFCFCF;
    border: 1px solid #fff;
    padding: 18px 28px;
}

/* RESPONSIVE */

@media only screen and (max-width: 1820px) {
    .newsSliders {
        justify-content: center;
        flex-direction: column;
    }

    .newsInfo {
        margin: 25px 0px;
    }

    .newsInfo-img {
        border-radius: 8px;
    }

    .newsDetails {
        border-top-left-radius: 8px;
        border-bottom-left-radius: 8px;
    }
}
/* ... */

